--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -12,8 +12,8 @@
         android:layout_height="wrap_content"
         app:counterEnabled="true"
         app:counterMaxLength="280"
-        app:counterTextAppearance="@style/counterText"
-        app:counterOverflowTextAppearance="@style/counterOverride">
+        app:counterOverflowTextAppearance="@style/counterOverride"
+        app:counterTextAppearance="@style/counterText">
 
         <EditText
             android:id="@+id/etCompose"
